@@ -16,6 +16,11 @@
 
 .. _`PR 23`: https://github.com/zodb/relstorage/pull/23/
 
+- zodbconvert: The ``--incremental`` option is supported with a
+  FileStorage (or any storage that implements
+  ``IStorage.lastTransaction()``)
+  as a destination, not just RelStorages.
+
 1.6.0b3 (2014-12-08)
 --------------------
 
